# Koncerty

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini
backend/: Dockerfile  credentials.json  pyproject.toml  start_be.sh
backend/src/: database.py  main.py
backend/src/catalogue/: router.py  schemas.py  service.py
backend/src/events/: models.py  router.py  schemas.py  service.py
backend/src/files/: router.py  schemas.py  service.py
backend/src/forum/: Google.py  config.py  gmail.py  models.py  router.py  schemas.py  sendEmail.py  service.py
backend/src/groups/: router.py  schemas.py  service.py
backend/src/users/: models.py  router.py  schemas.py  service.py
backend/tests/: test_database.py  test_main.py
backend/tests/events/: test_events.py
backend/tests/files/: test_files.py
backend/tests/forum/: test_forum.py
backend/tests/group/: test_groups.py
backend/tests/users/: test_users.py  test_users_error.py
database/: .pgpass  db_init.sh  docker-compose.yml  init_bd.sql  populate.sql
frontend/: package-lock.json  package.json  start_fe.sh
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts  interfaces.ts
frontend/src/app/bars/: side-bar.component.css  side-bar.component.html  side-bar.component.ts  top-bar.component.css  top-bar.component.html  top-bar.component.ts
frontend/src/app/event-calendar/: event-calendar.component.css  event-calendar.component.html  event-calendar.component.ts
frontend/src/assets/i18n/: en.json  (+1 more)
(+92 files in other folders)
